// Schéma 1: Utilisateurs & Authentification
// https://dbdiagram.io/

Table users {
  id bigint [pk, increment]
  username varchar(255) [unique, not null]
  name varchar(255) [null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp [null]
  password varchar(255) [not null]
  role enum('Admin','User') [default: 'User']
  newsletter_subscribed boolean [default: false]
  newsletter_subscribed_at timestamp [null]
  
  // Adresses
  address varchar(255) [null]
  city varchar(255) [null]
  postal_code varchar(20) [null]
  country varchar(100) [null]
  phone varchar(20) [null]
  
  // Système
  remember_token varchar(100) [null]
  deleted_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Table principale des utilisateurs avec rôles Admin/User'
}

Table password_reset_tokens {
  email varchar(255) [pk]
  token varchar(255) [not null]
  created_at timestamp [null]
  
  Note: 'Tokens de réinitialisation de mot de passe'
}

Table messages {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  name varchar(255) [not null]
  email varchar(255) [not null]
  subject varchar(255) [not null]
  content text [not null]
  status enum('unread','read','replied') [default: 'unread']
  admin_reply text [null]
  replied_at timestamp [null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  Note: 'Messages entre utilisateurs et administrateurs'
}

// Relations
Ref: password_reset_tokens.email - users.email
Ref: messages.user_id > users.id
